--- a/Notebooks/2. Variables.ipynb
+++ b/Notebooks/2. Variables.ipynb
@@ -1997,7 +1997,9 @@
    "source": [
     "<span class=\"label label-warning\"> Assessment: Evaluate </span>\n",
     "\n",
-    "Now evaluate the distribution of each variable and <b>determine</b> if you need to control for any outliers. It's subjective how to identify what is an outlier. One way is to look at examples where the min (max) value is substantially different than the 1st (99th) percentile value. This can indicate how long of a tail there is in the distribution."
+    "Now evaluate the distribution of each variable and <b>determine</b> if you need to control for any outliers. It's subjective how to identify what is an outlier and it may depend on your data. A data distribution with very long tails might need to be handled differently than something with a more normal distribution. \n",
+    "\n",
+    "Hint: One way is to look at examples where the min (max) value is substantially different than the 1st (99th) percentile value. This can indicate how long of a tail there is in the distribution."
    ]
   },
   {
@@ -2210,6 +2212,12 @@
     }
    ],
    "source": [
+    "#######################################\n",
+    "# SAMPLE\n",
+    "# DO NOT MAKE ANY CHANGES IN THIS CELL\n",
+    "#######################################\n",
+    "\n",
+    "\n",
     "# get info on the percentile values in the tails of the distribution of each variable\n",
     "distribution = pd.DataFrame()\n",
     "for col in ['industrial_production', 'change_inflation', 'change_unemployment',\n",
@@ -2235,7 +2243,12 @@
     "    \n",
     "    distribution = distribution.append(temp)\n",
     "    \n",
-    "distribution"
+    "print(distribution)\n",
+    "\n",
+    "# see below that for industrial production the minimum value is -2.45\n",
+    "# this looks like an outlier because it's so different than the value at the 1st percentile.\n",
+    "# this indicates a very long tail\n",
+    "# In contrast, the minimum value of delinquencies is very similar to the 1st percentile. "
    ]
   },
   {
@@ -2244,9 +2257,20 @@
    "source": [
     "<span class=\"label label-warning\"> Assessment: Create </span>\n",
     "\n",
-    "Now <b>design</b> a method to control for outliers. \n",
+    "Now <b>design</b> a method to control for outliers. Often outlier control methods might entail just dropping data that looks like an outlier or to use winsorization (create a floor/ceiling to the data range -  https://en.wikipedia.org/wiki/Winsorizing). Sometimes people transform the data by taking a log or exponent of the data. What you do will depend on your data. \n",
     "\n",
-    "https://en.wikipedia.org/wiki/Winsorizing"
+    "For example, taking a log value is useful when your data can have a wide range with a long right tail. This commonly happens when you're dealing with income distribution and you're trying to compare people who all usually make less than $100,000 but there is a small percentage of people that makes 100x that amount. \n",
+    "\n",
+    "Based on the data you have and the outliers you've identified above, implement a strategy to control for outliers. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TO DO"
    ]
   },
   {
@@ -2464,6 +2488,12 @@
     }
    ],
    "source": [
+    "#######################################\n",
+    "# SAMPLE\n",
+    "# DO NOT MAKE ANY CHANGES IN THIS CELL\n",
+    "#######################################\n",
+    "\n",
+    "\n",
     "def winsorize(x):\n",
     "    \n",
     "    pct_1 = x.quantile(q = 0.01)\n",
@@ -2484,52 +2514,18 @@
     "           'housing_starts', 'delinquencies', 'credit_risk_premium', 'slope_interest_rate']:\n",
     "    df[col] = winsorize(df[col])\n",
     "    \n",
-    "# view the results\n",
-    "distribution = pd.DataFrame()\n",
-    "for col in ['industrial_production', 'change_inflation', 'change_unemployment',\n",
-    "           'housing_starts', 'delinquencies', 'credit_risk_premium', 'slope_interest_rate']:\n",
-    "    temp = pd.DataFrame({'variable': [col]})\n",
-    "    \n",
-    "    temp['min'] = df[col].min()\n",
-    "    temp['1st'] = df[col].quantile(q = 0.01)\n",
-    "    temp['2nd'] = df[col].quantile(q = 0.02)\n",
-    "    temp['3rd'] = df[col].quantile(q = 0.03)\n",
-    "    temp['4th'] = df[col].quantile(q = 0.04)\n",
-    "    temp['5th'] = df[col].quantile(q = 0.05)\n",
-    "    \n",
-    "    temp['mean'] = df[col].mean()\n",
-    "    temp['median'] = df[col].median()\n",
-    "    \n",
-    "    temp['95th'] = df[col].quantile(q = 0.95)\n",
-    "    temp['96th'] = df[col].quantile(q = 0.96)\n",
-    "    temp['98th'] = df[col].quantile(q = 0.97)\n",
-    "    temp['98th'] = df[col].quantile(q = 0.98)\n",
-    "    temp['99th'] = df[col].quantile(q = 0.99)\n",
-    "    temp['max'] = df[col].max()\n",
-    "    \n",
-    "    distribution = distribution.append(temp)\n",
-    "    \n",
-    "distribution\n",
+    "\n",
     "    "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 177,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-2.4549977385798276"
-      ]
-     },
-     "execution_count": 177,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
+   "source": [
+    "### End Lesson\n",
+    "\n",
+    "That's it for the introduction section. You can proceed to the next workbook"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2540,32 +2536,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Program Files\\Anaconda3\\lib\\site-packages\\ipykernel\\__main__.py:7: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "-0.98106494747830775"
-      ]
-     },
-     "execution_count": 179,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "winsorize(df['industrial_production']).min()"
+    "[intentionally left blank]\n",
+    "<br><br>\n",
+    "<br><br>\n",
+    "<br><br>\n",
+    "<br><br>\n",
+    "<br><br>\n",
+    "<br><br>\n",
+    "<br><br>\n",
+    "<br><br>\n",
+    "<br><br>\n",
+    "<br><br>\n",
+    "<br><br>\n",
+    "<br><br>\n",
+    "<br><br>\n",
+    "<br><br>\n",
+    "<br><br>"
    ]
   },
   {
