add pics for variable selection chapter

--- a/Notebooks/4. Variable Selection.ipynb
+++ b/Notebooks/4. Variable Selection.ipynb
@@ -2,14 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Program Files\\Anaconda3\\lib\\site-packages\\statsmodels\\compat\\pandas.py:56: FutureWarning: The pandas.core.datetools module is deprecated and will be removed in a future version. Please use the pandas.tseries module instead.\n",
+      "  from pandas.core import datetools\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import time\n",
-    "import UserDefinedFunctions"
+    "import UserDefinedFunctions\n",
+    "import matplotlib.pyplot as plt\n",
+    "import statsmodels.api as sm\n",
+    "import statsmodels\n",
+    "\n",
+    "%matplotlib inline"
    ]
   },
   {
@@ -208,24 +222,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Index(['portfolio_date', 'industrial_production', 'cpi_less_food_energy_date',\n",
-       "       'cpi_less_food_energy_realtime_start', 'cpi_less_food_energy',\n",
-       "       'monthly_cpi_change', 'ust_3m_date', 'ust_3m_realtime_start',\n",
-       "       'ust_3m_rate', 'change_inflation', 'credit_risk_premium',\n",
-       "       'slope_interest_rate', 'housing_starts', 'delinquencies',\n",
-       "       'change_unemployment', 'forward_spy_return'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'sm' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-17-341a27c15b00>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mbest_aic\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m999999999.\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0mresults\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mUserDefinedFunctions\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mWLS_regression\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtraining_data\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0miloc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;36m100\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrho\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0.99\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0mresults\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mH:\\Market-Timing-Model\\Notebooks\\UserDefinedFunctions.py\u001b[0m in \u001b[0;36mWLS_regression\u001b[0;34m(data, rho)\u001b[0m\n\u001b[1;32m     85\u001b[0m     \u001b[1;31m# now fit a model using the statsmodel WLS function\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     86\u001b[0m     \u001b[1;31m#sm.WLS(y_data, x_data, weights)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m---> 87\u001b[0;31m     \u001b[0mmodel_wls\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msm\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mWLS\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'forward_spy_return'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstatsmodels\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtools\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtools\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0madd_constant\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mweights\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mweights\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     88\u001b[0m     \u001b[0mfit_wls\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmodel_wls\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     89\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'sm' is not defined"
+     ]
     }
    ],
    "source": [
@@ -235,11 +245,11 @@
     "all_possible_vars = ['industrial_production', 'change_inflation', 'credit_risk_premium', 'slope_interest_rate',\n",
     "         'housing_starts', 'delinquencies', 'change_unemployment']\n",
     "selected_vars = []\n",
-    "current_aic = \n",
+    "current_aic = 999999999.\n",
+    "best_aic = 999999999.\n",
     "\n",
-    "\n",
-    "\n",
-    "training_data.columns\n"
+    "results = UserDefinedFunctions.WLS_regression(training_data.iloc[0:100], rho = 0.99)\n",
+    "results\n"
    ]
   },
   {
