--- a/Notebooks/3. Statistical Model.ipynb
+++ b/Notebooks/3. Statistical Model.ipynb
@@ -19,6 +19,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 3. Statistical Model\n",
+    "\n",
     "In the prior notebook we worked on downloading, exploring and combining data into a useful representation for modeling. In this notebook we will begin building a framework that will fit a model to the data. Specifically, we will build a weighted-least squares regression model to predict the forward 1M return of the S&P 500 using a set of macroeconomic variables. "
    ]
   },
@@ -91,6 +93,7 @@
     "<div class=\"alert alert-info\" role=\"alert\">\n",
     "\n",
     "<a id='#snap_back_2'></a>\n",
+    "<a id='#snap_back_3'></a>\n",
     "Where 𝜌 is the decay factor which we set to 0.99 at the monthly frequency.  This value implies a half-life of approximately 60 months.  Varying the value of 𝜌 such that the half-life of the <a href='#supplemental_content_2'>weights</a> ranges between 30 and 120 months does not materially affect our results.  OLS is a special case of <a href='#supplemental_content_3'>WLS</a> if we set 𝜌 to be one.   \n",
     "<br><br>\n",
     "\n",
