make x_vars an argument to WLS_regression function

--- a/Notebooks/3. Statistical Model.ipynb
+++ b/Notebooks/3. Statistical Model.ipynb
@@ -291,7 +291,10 @@
     "training_data = pd.read_hdf('training_data.hdf')\n",
     "\n",
     "# define a function to run a regression on a given set of data\n",
-    "def WLS_regression(data, rho = 0.99):\n",
+    "def WLS_regression(data, \n",
+    "                   x_vars = ['industrial_production', 'change_inflation', 'credit_risk_premium',\n",
+    "           'slope_interest_rate', 'housing_starts', 'delinquencies', 'change_unemployment'],\n",
+    "                   rho = 0.99):\n",
     "    \n",
     "    df = data.copy()\n",
     "    df.dropna(axis = 0, inplace = True)\n",
@@ -311,8 +314,7 @@
     "    weights = np.array(weights)\n",
     "    \n",
     "    # create the explanatory variables\n",
-    "    X = df[['industrial_production', 'change_inflation', 'credit_risk_premium',\n",
-    "           'slope_interest_rate', 'housing_starts', 'delinquencies', 'change_unemployment']]\n",
+    "    X = df[x_vars]\n",
     "    \n",
     "    # now fit a model using the statsmodel WLS function\n",
     "    #sm.WLS(y_data, x_data, weights)\n",
