--- a/Notebooks/4. Variable Selection.ipynb
+++ b/Notebooks/4. Variable Selection.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -710,6 +710,13 @@
     }
    ],
    "source": [
+    "#######################################\n",
+    "# SAMPLE\n",
+    "# DO NOT MAKE ANY CHANGES IN THIS CELL\n",
+    "#######################################\n",
+    "\n",
+    "\n",
+    "\n",
     "# let's define the set of variables to test\n",
     "all_possible_vars = ['industrial_production', 'change_inflation', 'credit_risk_premium', 'slope_interest_rate',\n",
     "                     'housing_starts', 'delinquencies', 'change_unemployment']\n",
@@ -836,9 +843,9 @@
     "\n",
     "Given N total variables, we could have a model with just 1 variable, or a model with just 2 variables, ... or a model with all N variables. \n",
     "\n",
-    "How many 1 variable models are there? There are N of them.\n",
+    "How many 1-variable models are there? There are N of them.\n",
     "\n",
-    "How many 2 variable models are there? There are \"7 choose 2\" possible unique combinations. Turning to google and just entering \"7 choose 2\" shows yields 21. \n",
+    "How many 2-variable models are there? If N were 7 then there are \"7 choose 2\" possible unique combinations. Turning to google and just entering \"7 choose 2\" shows yields 21. \n",
     "\n",
     "So ultimately there are (N choose 1) + (N choose 2) + ... (N choose N)\n",
     "\n",
@@ -858,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -879,6 +886,13 @@
     }
    ],
    "source": [
+    "#######################################\n",
+    "# SAMPLE\n",
+    "# DO NOT MAKE ANY CHANGES IN THIS CELL\n",
+    "#######################################\n",
+    "\n",
+    "\n",
+    "\n",
     "all_vars = ['var0', 'var1', 'var2', 'var3', 'var4' ]\n",
     "\n",
     "# generate all possible combinations of 3 variables from the list above\n",
@@ -891,7 +905,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -906,10 +929,76 @@
       "delinquencies average gain: 0.012293318207050031\n",
       "change_unemployment average gain: 0.00247940418825438\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>index</th>\n",
+       "      <th>change_inflation</th>\n",
+       "      <th>change_unemployment</th>\n",
+       "      <th>credit_risk_premium</th>\n",
+       "      <th>delinquencies</th>\n",
+       "      <th>housing_starts</th>\n",
+       "      <th>industrial_production</th>\n",
+       "      <th>slope_interest_rate</th>\n",
+       "      <th>portfolio_date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.168826</td>\n",
+       "      <td>0.032916</td>\n",
+       "      <td>0.151033</td>\n",
+       "      <td>0.163203</td>\n",
+       "      <td>0.16611</td>\n",
+       "      <td>0.160652</td>\n",
+       "      <td>0.15726</td>\n",
+       "      <td>2018-06-30</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "index  change_inflation  change_unemployment  credit_risk_premium  \\\n",
+       "0              0.168826             0.032916             0.151033   \n",
+       "\n",
+       "index  delinquencies  housing_starts  industrial_production  \\\n",
+       "0           0.163203         0.16611               0.160652   \n",
+       "\n",
+       "index  slope_interest_rate portfolio_date  \n",
+       "0                  0.15726     2018-06-30  "
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# TODO\n",
+    "#######################################\n",
+    "# SAMPLE\n",
+    "# DO NOT MAKE ANY CHANGES IN THIS CELL\n",
+    "#######################################\n",
+    "\n",
     "\n",
     "\n",
     "data = training_data.copy()\n",
@@ -921,10 +1010,11 @@
     "# initialize a dictionary to hold the performance gains for each variable\n",
     "performance_gains = {var: [] for var in all_possible_vars}\n",
     "\n",
-    "# try adding 1 variable \n",
-    "for i in range(0, len(all_possible_vars)):\n",
+    "# try adding 1 variable to the 'prior model'\n",
+    "for i in range(0, len(all_possible_vars) + 1):\n",
     "    \n",
     "    # get all combination of i variables from the set of N possible variables\n",
+    "    # this is the \"prior model\"\n",
     "    combinations = itertools.combinations(all_possible_vars, i)\n",
     "    \n",
     "    # iterate through every \"prior model\"\n",
@@ -958,53 +1048,115 @@
     "                gain = new_r_squared = prior_r_squared\n",
     "                \n",
     "                performance_gains[var].append(gain)\n",
-    "                \n",
+    "\n",
+    "# see the average performance gain for each variable\n",
     "for var in all_possible_vars:\n",
     "    print('{} average gain: {}'.format(var, np.mean(performance_gains[var])))\n",
     "                \n",
-    "                \n",
-    "                \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1, 2, 3)\n",
-      "[1, 2, 3, 100]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "26.5"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "temp1 = (1,2,3)\n",
-    "temp2 = list(temp1)\n",
-    "temp2.append(100)\n",
+    "# calculate the proportion of total performance gain attributable to each variable\n",
+    "df = pd.DataFrame(performance_gains)\n",
+    "df = df.mean().to_frame('average_gain')\n",
+    "df['total_gain'] = df['average_gain'].sum()\n",
+    "df['importance'] = df['average_gain'] / df['total_gain']\n",
+    "df.sort_values(by = 'importance', inplace = True)\n",
     "\n",
-    "print(temp1)\n",
-    "print(temp2)\n",
-    "np.mean(temp2)"
+    "# format data \n",
+    "df = df[['importance']]\n",
+    "df.reset_index(inplace = True)\n",
+    "df = df.pivot_table(values=\"importance\", columns='index')\n",
+    "df['portfolio_date'] = data['portfolio_date'].max()\n",
+    "df.reset_index(inplace = True, drop = True)\n",
+    "df\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<span class=\"label label-warning\"> Assessment: Create </span>"
+    "<span class=\"label label-warning\"> Assessment: Analyze </span>\n",
+    "    \n",
+    "Use the code you developed and analyze the relative weights of a set of explanatory variables for some dataset. Which variables were most important and which were least?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[your answer here]\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sample Answer: Based on the example above, the change in inflation was the most important variable, followed by housing starts and industrial production. Most variables generally had the same level of importance (15-16%) except for the change in unemployment which was by far the least important at only 3%. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<span class=\"label label-warning\"> Assessment: Evaluate </span>\n",
+    "\n",
+    "Based on your analysis above, assess whether your results make good intuitive sense? Can you construct a narrative to describe the relative weights you are seeing? Do your results give you more or less confidence in the procedure for measuring variable importance?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[your answer here]\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sample Answer: I am a bit puzzled that change in unemployment is such a weak predictor of forward market returns. The dataset I used runs from the mid 90s through June 2018 and over that period I would have thought it'd do better. We do use WLS though which means we give greater weight to the recent period. During the last few years, markets have been generally going up though there was significant market turmoil in the first half of 2018 even though the job market has been consistently performing well. That may explain the low weight on the unemployment rate. \n",
+    "\n",
+    "Overall I would have expected more variation in the importance of variables but all variables seem equally important (except for the unemployment rate). This gives me less confidence in the methodology for measuring variable importance and I'd be interested in alternative measures. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<span class=\"label label-warning\"> Assessment: Create </span>\n",
+    "\n",
+    "Procedures for variable selection and measuring variable importance are subjective and just because Hull et al. use certain methodologies does not mean that they're the best. Can you think of any other ways you would choose which variables you'd want to use? THis question isn't about searching google but rather it asks you to try to create your own method. Or other ways to measure variable importance?  \n",
+    "\n",
+    "Discuss your ideas below."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[your answer here]\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sample Answer: For variable selection I could see using a decision tree to try to identify which variables are most important (which are chosen by the tree) and then passing only those variables into the linear regression procedure. In this way we combine two different model types. Decision trees are generally recognized to be very good for fature selection because they prioritize using the variables tha generate the most explanatory power at each tree node. \n",
+    "\n",
+    "To measure variable importance we can again use decision trees where there exists a procedure to measure variable importance by measuring the information gain at each node. \n"
    ]
   },
   {
