--- a/Notebooks/2. Variables.ipynb
+++ b/Notebooks/2. Variables.ipynb
@@ -2202,7 +2202,7 @@
    "source": [
     "### End Lesson\n",
     "\n",
-    "That's it for the introduction section. You can proceed to the next workbook"
+    "That's it for this section. You can proceed to the next workbook"
    ]
   },
   {
@@ -2213,10 +2213,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "[intentionally left blank]\n",
     "<br><br>\n",
