--- a/Notebooks/4. Variable Selection.ipynb
+++ b/Notebooks/4. Variable Selection.ipynb
@@ -1165,7 +1165,7 @@
    "source": [
     "### End Lesson\n",
     "\n",
-    "That's it for the introduction section. You can proceed to the next workbook"
+    "That's it for this notebook. You can proceed to the next workbook"
    ]
   },
   {
