--- a/Notebooks/4. Variable Selection.ipynb
+++ b/Notebooks/4. Variable Selection.ipynb
@@ -654,7 +654,7 @@
     "    else:\n",
     "        vars_to_use.append(candidate_variable)\n",
     "        current_performance = best_candidate_performance\n",
-    "    print('done with iteration. Add {} and new best adjusted R^2 is {}'.format(candidate_variable, current_aic))\n",
+    "    print('done with iteration. Add {} and new best adjusted R^2 is {}'.format(candidate_variable, best_candidate_performance))\n",
     "    print()\n",
     "\n",
     "    \n",
@@ -1337,6 +1337,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python [conda root]",
    "language": "python",
