update notebook links

--- a/Notebooks/4. Variable Selection.ipynb
+++ b/Notebooks/4. Variable Selection.ipynb
@@ -66,6 +66,8 @@
     "\n",
     "2.3 Variable Selection \n",
     "\n",
+    "\n",
+    "<a id='snap_back_4'></a>\n",
     "In Figure 1 we look at the identity of the selected variables.  On the vertical axis is the contribution of each explanatory variable towards the <a href='#supplemental_content_4'>total explained variance</a> (Lindman, Merenda, and Gold, 1980; Chevan and Sutherland, 1991).  The stepwise WLS puts zero weight on marginal variables that do not add substantially to the model.  Of the 15 variables we consider, typically only about five to seven are selected at any given time.  There are significant changes in the number and identify of the selected variables.  In contrast, without variable selection, WLS reduces the weight put on marginal variables that do not contribute to the explanatory power of the model, but does not remove them from the model.   \n",
     "<br><br>\n",
     "\n",
@@ -1325,7 +1327,9 @@
     "\n",
     "For another take on variable importance using Lindeman, Merenda, and Gold see here:\n",
     "\n",
-    "https://www.r-bloggers.com/the-relative-importance-of-predictors-let-the-games-begin/"
+    "https://www.r-bloggers.com/the-relative-importance-of-predictors-let-the-games-begin/\n",
+    "\n",
+    "<a href='#snap_back_4'>go back to main body</a>"
    ]
   },
   {
