--- a/Notebooks/5. StrategyPerformance.ipynb
+++ b/Notebooks/5. StrategyPerformance.ipynb
@@ -67,6 +67,10 @@
     "Figure 2 presents the cumulative wealth of `$`1 invested in the market-timing strategy versus invested in the S&P 500.  In our sample from 2003 to February of 2017, the market grew from `$`1 to just over `$`3, whereas the market-timing strategy would have grown `$`11 to over `$`18 in the same period.  An important difference between the two cumulative wealth paths is that during the Global Financial Crisis (GFC), the market-timing strategy did not experience a large drawdown whereas the S&P 500 had a drawdown of over 50`%`.  The largest drawdowns of the market-timing strategy occurred in 2010 and 2015.   \n",
     "<br><br>\n",
     "\n",
+    "<a id='snap_back_2'></a>\n",
+    "<a href='#supplemental_content_2'>(Supplemental Content Available)</a>\n",
+    "<br><br>\n",
+    "\n",
     "Figure 3 shows the positions taken by our market-timing model.  The market exposure is constrained to be between 0`%` and 150`%` (1.5 times levered).  There is large variation in the dayto-day positions.  In the first four years the position changes were particularly large compared to those in later years.  From 2012 to 2015, there is an extended period in which the model called for positive positions of 50`%` or greater.  This aggressive positioning coincides with a period in which market excess returns were large and positive.  From Figure 2, we can see the cumulative wealth of the market-timing strategy almost doubled in this period.  \n",
     "<br><br>\n"
    ]
@@ -114,6 +118,10 @@
     "<div class=\"alert alert-info\" role=\"alert\">\n",
     "\n",
     "One important measure of risk, especially for practitioners, is the maximum drawdown experienced by a strategy.  A drawdown is calculated as the percent change from a strategy’s peak to its next closest trough; maximum drawdown is the largest drawdown in the lifetime of the strategy.  Maximum drawdown complements volatility to give investors a more complete picture of the stability of the strategy.  Figure 5 compares the drawdowns of our market-timing strategy with those of the S&P 500.  There are several differences between the two series.   \n",
+    "<br><br>\n",
+    "\n",
+    "<a id='snap_back_1'></a>\n",
+    "<a href='#supplemental_content_1'> (Supplemental Content Available)</a>\n",
     "<br><br>\n",
     "\n",
     "First, the magnitudes of the maximum drawdowns are vastly different between buy-and-hold and our market-timing model.  For the S&P 500 buy-and-hold, the maximum drawdown exceeds 50`%` during the Global Financial Crisis.  In comparison, the largest drawdown experienced by the market-timing model in this sample is about 20`%`, less than half of the drawdown for the S&P 500.   \n",
@@ -1024,7 +1032,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
+    "<a id='supplemental_content_1'></a>\n",
     "<span class=\"label label-success\"> Commentary and Supplemental Content </span>\n",
     "\n",
     "\n",
@@ -1053,14 +1061,16 @@
     "\n",
     "https://personal.vanguard.com/pdf/flgerm.pdf\n",
     "\n",
-    "http://evolutiq.com/wp-content/uploads/2015/09/EVOLUTIQ-White-Paper-Publication-2nd-Issue-Common-Metrics-for-Performance-Evaluation.pdf"
+    "http://evolutiq.com/wp-content/uploads/2015/09/EVOLUTIQ-White-Paper-Publication-2nd-Issue-Common-Metrics-for-Performance-Evaluation.pdf\n",
+    "\n",
+    "<a href='#snap_back_1'>go back to main body</a>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
+    "<a id='supplemental_content_2'></a>\n",
     "<span class=\"label label-success\"> Commentary and Supplemental Content </span>\n",
     "\n",
     "## Thoughts on measuring strategy performance...\n",
@@ -1079,7 +1089,7 @@
     "Here's an example of a strategy that professional investors like: A trade that generates small positive returns that are super stable (close to zero chance that the trade perform differently than predicted). From this perspective, the volatility (standard deviation of returns) is one of the most important things to look at. \n",
     "\n",
     "\n",
-    "\n",
+    "<a href='#snap_back_2'>go back to main body</a>\n",
     "\n"
    ]
   }
